--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
 
         @Html.Partial("_Footer")
     </div>
-
+    <a class="github-issue" href="https://github.com/sumerokr/inln-bootstrap/issues"><span class="github-issue__icon">!</span>Сообщить о баге</a>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
