--- a/Views/Shared/_Header.cshtml
+++ b/Views/Shared/_Header.cshtml
@@ -2,6 +2,7 @@
     <div class="navbar-inner">
         <a class="brand" href="/">Inln</a>
         <ul class="nav">
+            <li>@Html.ActionLink("// Админка", "Index", "Home", new { area = "Admin" }, null)</li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Web-разработка <b class="caret"></b></a>
                 <ul class="dropdown-menu">
