Добавлены подсказки размеров изобр. в админке
Добавлена подсказка по добавлению проектов

--- a/Areas/Admin/Views/Client/Create.cshtml
+++ b/Areas/Admin/Views/Client/Create.cshtml
@@ -33,6 +33,7 @@
         </div>
         <div class="editor-field">
             <input type="file" name="file" id="Logo" />
+            <p class="hint-block">Рекомендуемый размер изображения 140х80 (*.jpg, *.png, *.gif)</p>
         </div>
 
         <div class="editor-label">
