--- a/Areas/Admin/Views/Client/Edit.cshtml
+++ b/Areas/Admin/Views/Client/Edit.cshtml
@@ -39,6 +39,7 @@
             <img src="@Url.Content(Model.Logo)" width="140" height="80" alt="" />
             }
             <input type="file" name="file" id="Logo" />
+            <p class="hint-block">Рекомендуемый размер изображения 140х80 (*.jpg, *.png, *.gif)</p>
         </div>
 
         <div class="editor-label">
