--- a/Areas/Admin/Views/InfoBlock/Create.cshtml
+++ b/Areas/Admin/Views/InfoBlock/Create.cshtml
@@ -24,6 +24,7 @@
         </div>
         <div class="editor-field">
             <input type="file" name="imageFile" id="Image" />
+            <p class="hint-block">Рекомендуемый размер изображения 450х300 (*.jpg, *.png, *.gif)</p>
         </div>
 
         <div class="editor-label">
