--- a/Areas/Admin/Views/InfoBlock/Edit.cshtml
+++ b/Areas/Admin/Views/InfoBlock/Edit.cshtml
@@ -30,6 +30,7 @@
             <img src="@Url.Content(Model.Image)" width="140" height="80" alt="" />
             }
             <input type="file" name="imageFile" id="Image" />
+            <p class="hint-block">Рекомендуемый размер изображения 450х300 (*.jpg, *.png, *.gif)</p>
         </div>
 
         <div class="editor-label">
