--- a/Areas/Admin/Views/Project/Create.cshtml
+++ b/Areas/Admin/Views/Project/Create.cshtml
@@ -41,6 +41,7 @@
         </div>
         <div class="editor-field">
             <input type="file" name="logoFile" id="Logo" />
+            <p class="hint-block">Рекомендуемый размер изображения 140х80 (*.jpg, *.png, *.gif)</p>
         </div>
 
         <div class="editor-label">
@@ -48,6 +49,7 @@
         </div>
         <div class="editor-field">
             <input type="file" name="mainFile" id="MainImage" />
+            <p class="hint-block">Рекомендуемый размер изображения 930х1170 (*.jpg, *.png, *.gif)</p>
         </div>
 
         <div class="editor-label">
@@ -63,6 +65,7 @@
         </div>
         <div class="editor-field">
             <input type="file" name="sliderFile" id="SliderImage" />
+            <p class="hint-block">Рекомендуемый размер изображения 940х400 (*.jpg, *.png, *.gif)</p>
         </div>
 
         <div class="editor-label">
@@ -86,6 +89,7 @@
         </div>
         <div class="editor-field">
             <input type="file" name="responseFile" id="ResponseImage" />
+            <p class="hint-block">Рекомендуемый размер изображения 210х300 (*.jpg, *.png, *.gif)</p>
         </div>
 
         <div class="form-actions">
