--- a/Areas/Admin/Views/Project/Edit.cshtml
+++ b/Areas/Admin/Views/Project/Edit.cshtml
@@ -47,6 +47,7 @@
             <img src="@Url.Content(Model.Logo)" width="140" height="80" alt="" />
             }
             <input type="file" name="logoFile" id="Logo" />
+            <p class="hint-block">Рекомендуемый размер изображения 140х80 (*.jpg, *.png, *.gif)</p>
         </div>
 
         <div class="editor-label">
@@ -66,6 +67,7 @@
             <img src="@Url.Content(Model.GetThumb(Model.MainImage, 140, 80))" width="140" height="80" alt="" />
             }
             <input type="file" name="mainFile" id="MainImage" />
+            <p class="hint-block">Рекомендуемый размер изображения 930х1170 (*.jpg, *.png, *.gif)</p>
         </div>
 
         <div class="editor-label">
@@ -93,6 +95,7 @@
             <img src="@Url.Content(Model.GetThumb(Model.SliderImage, 140, 80))" width="140" height="80" alt="" />
             }
             <input type="file" name="sliderFile" id="SliderImage" />
+            <p class="hint-block">Рекомендуемый размер изображения 940х400 (*.jpg, *.png, *.gif)</p>
         </div>
 
         <div class="editor-label">
@@ -128,6 +131,7 @@
             <img src="@Url.Content(Model.GetThumb(Model.ResponseImage, 140, 80))" width="140" height="80" alt="" />
             }
             <input type="file" name="responseFile" id="ResponseImage" />
+            <p class="hint-block">Рекомендуемый размер изображения 210х300 (*.jpg, *.png, *.gif)</p>
         </div>
 
         <div class="editor-label">
