--- a/Areas/Admin/Views/Project/Index.cshtml
+++ b/Areas/Admin/Views/Project/Index.cshtml
@@ -4,6 +4,8 @@
     ViewBag.Title = "Список проектов";
 }
 
+<p>Для добавления проекта перейдите на список клиентов и нажмите "Добавить проект" напротив нужного.</p>
+
 <table class="table">
     <thead>
         <tr>
