Добавлена подсказка по сортировке клиентов

--- a/Areas/Admin/Views/Client/Order.cshtml
+++ b/Areas/Admin/Views/Client/Order.cshtml
@@ -11,6 +11,8 @@
 
 <p><button type="button" id="get-order" class="btn btn_primary">Сохранить сортировку</button> @Html.ActionLink("Вернуться к списку", "Index", null, new { @class = "btn" })</p>
 
+<p>В данном порядке сортировки отображаются клиенты на странице "Наши клиенты"</p>
+
 <table class="table table-hover">
     <thead>
         <tr>
